<resources>
    <string name="app_name">midtermnew</string>
    <string name="select_cities_from_below_list">Select Cities from below list</string>
    <string name="temperature">Temperature</string>
    <string name="temperature_maximum">Temperature Maximum</string>
    <string name="temperature_minimum">Temperature Minimum</string>
    <string name="description">Description</string>
    <string name="humidity">Humidity</string>
    <string name="windspeed">WindSpeed</string>
    <string name="forecast">Forecast</string>
    <string name="temperature_new">Temperature:</string>
    <string name="humidity_new">Humidity</string>
</resources>
